--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -1,6 +1,6 @@
 {
     "LanguageNotice.title": "Приветствуем Вас!",
-    "LanguageNotice.text": "Мы экспериментируем с базовой поддержкой международных языкоа. На данный момент это начальная стадия, но мы надеемся добавить больше языков в дальнейшем.",
+    "LanguageNotice.text": "Мы экспериментируем с базовой поддержкой международных языков. На данный момент это начальная стадия, но мы надеемся добавить больше языков в дальнейшем.",
     "LanguageNotice.useEnglish": "Пожалуйста используйте Английский вариант",
 
     "Lcars.copyright": "STAR TREK и сопутствующие обозначения и логотипы являются товарными знаками CBS Studios. Все права защищены.",
@@ -17,7 +17,7 @@
     "EraSelectionPage.eraInstruction": "Выберите в какой Эре вы планируете играть. Спросите Мастера какую Эру выбрать.",
 
     "Home.title": "Генератор Персонажей STA",
-    "Home.selection": "Выберите инстумент.",
+    "Home.selection": "Выберите инструмент.",
     "Home.characterButton": "Персонажи и Корабли",
     "Home.talentsButton": "Обзор Талантов",
     "Home.tokenCreator": "Токены",
@@ -143,6 +143,8 @@
 
     "EnvironmentPage.simple.instruction": "Или выберите, или рандомизируйте Среду обитания",
 
+    "FinishPage.rank.instruction": "Выберите рагн вашего персонажа.",
+
     "SoloConstructTypePage.character": "Персонаж",
     "SoloConstructTypePage.instruction": "Вы создаете персонажа или звездолет?",
     "SoloConstructTypePage.starship": "Звездолет",
@@ -234,7 +236,7 @@
     "ToolSelection.supportingCharacter": "Персонаж поддержки",
     "ToolSelection.starship": "Звездолет",
     "ToolSelection.spaceSector": "Звездный сектор",
-    "ToolSelection.randomNpc": "Рандомальный второстепенный персонаж",
+    "ToolSelection.randomNpc": "Рандомный второстепенный персонаж",
 
     "Common.button.random": "Случайный выбор",
     "Common.button.select": "Выбрать",
@@ -286,6 +288,7 @@
     "Construct.other.focuses": "Специализации",
     "Construct.other.job": "Работа",
     "Construct.other.name": "Имя",
+    "Construct.other.pronouns": "Называть",
     "Construct.other.rank": "Ранг",
     "Construct.other.reputation": "Репутация",
     "Construct.other.shields": "Щиты",
@@ -402,7 +405,7 @@
     "CareerEvent.common.12.name": "Предательство идеалов ради начальства",
     "CareerEvent.common.12.description": "Персонаж оказался в ситуации, когда был вынужден выбирать между своими идеалами и приказом командира, которому доверял, и решил подчиниться приказу. \n\n- Кем был командир? Что он попросил сделать? \n- Как персонаж чувствует себя сейчас?\nКаковы были последствия этого поступка? Есть ли записи случившегося? Был ли персонаж прав?",
 
-    "CareerEvent.common.13.name": "Пеподчинение старшему по званию",
+    "CareerEvent.common.13.name": "Неподчинение старшему по званию",
     "CareerEvent.common.13.description": "Персонаж оказался в ситуации, когда был вынужден выбирать между своими идеалами и приказом командира, которому он доверял, и решил следовать идеалам. \n\n- Кем был командир? Что он просил сделать? Как персонаж чувствует себя сейчас?\n- Каковы были последствия этого поступка? Есть ли записи случившегося? Был ли персонаж прав?",
 
     "CareerEvent.common.14.name": "Новая стратегия боя",
@@ -484,6 +487,10 @@
     "GovernmentType.name.other": "Другое",
 
     "NasoLabialFoldType.none": "Отсуствует",
+
+    "Rank.captain.name": "Капитан",
+
+    "Rank.commander.name": "Коммандер",
 
     "Source.type.coreBook": "Базовые книги правил",
     "Source.type.unofficial": "Неофициальные ресурсы",
@@ -734,6 +741,10 @@
 
     "Talent.commandShip.soloDescription": "У звездолёта есть системы командования и управления, позволяющие координировать действия союзников в кризисной ситуации.",
 
+    "Talent.computerExpertise": "Компьютерный специалист",
+
+    "Talent.computerExpertise.description": "Выполняя Задачу, связанную с программированием или компьютерными системами, бросьте бонусный d20.",
+
     "Talent.culturalFlexibility": "Культурная гибкость",
 
     "Talent.culturalFlexibility.description": "Ваш вид дружелюбен, терпелив и любознателен, и вы - пример этих качеств. Вы легко приспосабливаетесь к незнакомым социальным структурам и новым культурам. Снизьте на 1 сложность Задач по знакомству с неизвестной культурой или при попытке придерживаться верного поведения, взаимодействуя с представителем такой культуры.",
@@ -822,9 +833,17 @@
 
     "Talent.incisiveScrutiny.description": "Вы умеете находить слабые места в аргументах, теориях и механизмах, получать о них информацию и понимать их природу по их реакции при давлении на уязвимые точки. При успешном выполнении Задачи на Самоконтроль или Понимание получаете дополнительный жетон Импульса, который можно использовать, только чтобы «Получить информацию».",
 
+    "Talent.intenseScrutiny": "Пристальное внимание",
+
+    "Talent.intenseScrutiny.description": "Успешно выполнив Задачу на Здравомыслие или Самоконтроль в рамках Продолжительной задачи, снизьте рейтинг Сопротивляемости на 1 или 2 за каждый выпавший Эффект.",
+
     "Talent.interrogation": "Допрос",
 
     "Talent.interrogation.description": "Успешно выполнив Задачу по принуждению кого-либо к раскрытию информации, вы получаете 1 дополнительный жетон Импульса, который можно сбросить только для использования правила «Получить информацию».",
+
+    "Talent.inTheNickOfTime": "В последний момент",
+
+    "Talent.inTheNickOfTime.description": "Успешно выполнив Задачу на Инженерию или Науку в рамках Продолжительной задачи, вы увеличиваете количество сделанной Работы на 1 за каждый выпавший Эффект.",
 
     "Talent.joined": "Соединенный",
 
@@ -933,6 +952,10 @@
     "Talent.technicalExpertise": "Технические знания",
 
     "Talent.technicalExpertise.description": "Выполняя Задачу, при которой получена Помощь Компьютеров или Сенсоров звездолёта, можно заново бросить 1 использованный d20 (в том числе d20, брошенный за Помощь звездолёта).",
+
+    "Talent.testingATheory": "Проверка теории",
+
+    "Talent.testingATheory.description": "Выполняя Задачу на Науку или Инженерию, бросьте бонусный d20, если прошлая Задача, которую вы успешно выполнили в текущем  приключении, была связана с научным или техническим вопросом в той же сфере.",
 
     "Talent.theUshaan": "Ушаан",
 
