- restructuring of system generation code; add atmosphere details

--- a/WebTools/src/i18n/locales/de/translations.json
+++ b/WebTools/src/i18n/locales/de/translations.json
@@ -643,6 +643,8 @@
     "Division.monsterMaroon.specialServices": "Ordonnazen",
     "Division.monsterMaroon.trainee": "Rekrut",
 
+    "Division.strangeNewWorlds.medical": "Medizin",
+
     "Era.name.enterprise": "Enterprise (22. Jahrhundert)",
     "Era.name.originalSeries": "Originalserie (23. Jahrhundert)",
     "Era.name.nextGeneration": "Das Nächste Jahrhundert (24. Jahrhundert)",
